implement navigation menu that highlights the current page

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
   }
 }
 
+a.active.link {
+  font-weight: 800;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
